Fix buttons in high contrast themes

--- a/style/themes/high-contrast.css
+++ b/style/themes/high-contrast.css
@@ -500,18 +500,22 @@ table.dataTable thead th:hover.sorting_desc_disabled::after {
 .btn-info {
   background: var(--info-color);
   border-color: var(--info-color) !important;
+  color: #fff;
 }
 .btn-danger {
   background: var(--danger-color);
   border-color: var(--danger-color) !important;
+  color: #fff;
 }
 .btn-warning {
   background: var(--warning-color);
   border-color: var(--warning-color) !important;
+  color: #fff;
 }
 .btn-success {
   background: var(--success-color);
   border-color: var(--success-color) !important;
+  color: #fff;
 }
 
 .btn-default:hover {
